-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.3.0-beta1
-
None
-
Qt Creator 3.2.82 (3.3.0-rc1-enterprise), Based on Qt 5.4.0 (MSVC 2010, 32 bit), Built on Nov 19 2014 at 13:04:30, From revision e3ae038387 using
qt-enterprise-windows-x86-msvc2013-5.4.0-rc_2014-11-20_04-52-42-82.exe
When
- Opening a Qt example from the welcome page
- Opening a Commercial example from the welcome page
- Opening an example using the file dialog
the project configuration page appears and an existing development-version of Qt is pre-selected
FS layout:
SDK: d:\dev\sdk\Qt54END82 Dev-Qt: d:\dev\5-vs13-stable-dbg\qt-stable-dbg\qtbase
For Gerrit Dashboard: QTCREATORBUG-13469 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
100419,2 | BaseQtVersion: Rename isInSourceDirectory to isSubProject and fix it | 3.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |