BaseQtVersion: Rename isInSourceDirectory to isSubProject and fix it

The source and examples directory is not a sub directory of the qt
source directory in the sdks. But we still want to treat it as part
of a the matching qt.

Task-number: QTCREATORBUG-13469
Change-Id: Ib63722052a14c29e4198c879dd770fb4ecdcdb80
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>